@@ -1,6 +1,8 @@
 package ru.mail.polis.homework.files;
 
 import java.io.*;
+import java.nio.channels.Channels;
+import java.nio.channels.FileChannel;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -13,43 +15,46 @@ public class CopyFile {
      * Реализовать копирование папки из pathFrom в pathTo. Скопировать надо все внутренности
      * Файлы копировать ручками через стримы.
      */
-    public static String copySmallFiles(String pathFrom, String pathTo) throws IOException {
-       final Path pFrom = Path.of(pathFrom).toAbsolutePath();
-       final Path pTo = Path.of(pathTo).toAbsolutePath();
+    public static String copySmallFiles(String pathFrom, String pathTo){
+       final Path directoryFrom = Paths.get(pathFrom).toAbsolutePath();
+       final Path directoryTo = Paths.get(pathTo).toAbsolutePath();
+        if (!Files.exists(directoryFrom)) {
+            return null;
+        }
+       copySmallFiles(directoryFrom, directoryTo);
 
-       if (Files.isDirectory(pFrom)){
-           try {
-               Files.createDirectory(Paths.get(pTo.toString()));
-               final List<Path> s = Files.list(pFrom).collect(Collectors.toList());
-               for (Path i: s){
-                  copySmallFiles(i.toString(), Paths.get(pTo.toString(), i.getFileName().toString()).toString());
-               }
-           } catch (IOException e) {
-               e.printStackTrace();
-           }
-
-
-       }else{
-           copyFile(pFrom, pTo);
-       }
        return pathTo;
     }
-    private static void copyFile(Path from, Path to){
-        try {
-            FileInputStream in = new FileInputStream(from.toString());
-            FileOutputStream out = new FileOutputStream(to.toString());
-            byte[] buffer = new byte[1024];
-            int b = in.read(buffer);
-            while (b > 0) {
-                out.write(buffer, 0, b);
-                b = in.read(buffer);
-            }
-            in.close();
-            out.close();
-        } catch (IOException e) {
-            e.printStackTrace();
 
+    private static void copySmallFiles(Path pathFrom, Path pathTo){
+        if (!Files.exists(pathFrom)){
+            return;
         }
+        if (Files.isDirectory(pathFrom)) {
+            try {
+                Files.createDirectory(Paths.get(pathTo.toSring()));
+                Files.list(pathFrom)
+                        .forEach(
+                                path-> copySmallFiles(path, Paths.get(pathTo.toString(), path.getFileName().toString()))
+                        );
+            }
+            catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+        else {
+            copyFile(pathFrom, pathTo);
+        }
+    }
 
+    private static void copyFile(Path from, Path to){
+        try (FileChannel fileFrom = new FileInputStream(from.toString()).getChannel();
+              FileChannel fileTo = new FileOutputStream(to.toString()).getChannel())
+        {
+            fileTo.transferFrom(fileFrom, 0, fileFrom.size());
+        }
+        catch (IOException e) {
+            e.printStackTrace();
+        }
     }
-    }
+}
